feat(rust): pure-Rust director path with Steam-stable Skyrim hollow load
Replace the Clojure director stack with vfs-directord + compose/source/cache
crates, dual-layer zip+disk mounts, and skyrim-live hard-gated against starting
Steam. Prefer real disk handles for ESM/BSA (NtCreateSection/MapView), fall
through FUSE NOT_FOUND, expand the hollow primary stack without patching the
library PE, and accept offline Steam so multi-session CM kicks do not kill the
client during adopt. Telemetry covers I/O stats and disk-prefer open proof.